fix some spacing

--- a/client/pages/front/style.css
+++ b/client/pages/front/style.css
@@ -72,7 +72,7 @@ img {
 }
 
 .greeting button {
-  margin-top: 20px;
+  margin: 20px 0;
   padding: 10px 20px;
   border: none;
   background: #d5b07a;
@@ -155,6 +155,7 @@ img {
 
 .aboutText {
   line-height: 1.6;
+  padding-bottom: 20px;
 }
 
 .contact {
